<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory android:title="@string/pref_category_location">
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="use_location"
            android:title="@string/pref_use_location" />

        <androidx.preference.EditTextPreference
            android:defaultValue="0"
            android:key="manual_latitude"
            android:title="@string/pref_manual_latitude"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.EditTextPreference
            android:defaultValue="0"
            android:key="manual_longitude"
            android:title="@string/pref_manual_longitude"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.EditTextPreference
            android:defaultValue="0"
            android:key="manual_altitude"
            android:title="@string/pref_manual_altitude"
            app:useSimpleSummaryProvider="true" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/pref_category_paths">
        <eu.domob.heliodos.ColorSwitchPreference
            android:defaultValue="true"
            android:key="show_solstice_high"
            android:title="@string/pref_show_solstice_high"
            app:colorKey="color_solstice_high"
            app:defaultColor="#FF0000FF" />

        <eu.domob.heliodos.ColorSwitchPreference
            android:defaultValue="true"
            android:key="show_solstice_low"
            android:title="@string/pref_show_solstice_low"
            app:colorKey="color_solstice_low"
            app:defaultColor="#FFFF0000" />

        <eu.domob.heliodos.ColorSwitchPreference
            android:defaultValue="true"
            android:key="show_equinox"
            android:title="@string/pref_show_equinox"
            app:colorKey="color_equinox"
            app:defaultColor="#FF00FF00" />

        <eu.domob.heliodos.ColorSwitchPreference
            android:defaultValue="true"
            android:key="show_sun_current"
            android:title="@string/pref_show_sun_current"
            app:colorKey="color_sun_current"
            app:defaultColor="#FFFFFF00" />

        <eu.domob.heliodos.ColorSwitchPreference
            android:defaultValue="false"
            android:key="show_moon_current"
            android:title="@string/pref_show_moon_current"
            app:colorKey="color_moon_current"
            app:defaultColor="#FFFFFFFF" />
    </androidx.preference.PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_general">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show_ticks"
            android:title="@string/pref_show_ticks"/>

        <Preference
            android:key="show_about"
            android:title="@string/about_title" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
